--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <div class="container home">
         <div class="home-wrapper">
             <h2>streak counter</h2>
+            <button id="best-btn">Best Done activity</button>
             <div class="home-content-wrapper">
                 <ion-icon name="add-circle-outline" id="add-btn"></ion-icon>
-                <img src="assest/Screenshot from 2023-01-28 19-13-55.png" alt="streak">
+                <img src="asset/Screenshot from 2023-01-28 19-13-55.png" alt="streak">
                 <p>welcome to my streak counter</p>
             </div>
         </div>
@@ -29,7 +30,7 @@
     <div class="container task-container">
         
     </div>
-
+    <script>var exports = {};</script>
     <script type="module" defer src="dist/main.js" ></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
